{
    "name": "GameInputSystem_Actions",
    "maps": [
        {
            "name": "Build Mode",
            "id": "862c4012-a464-4573-930a-319d8e7feee6",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "1a3f76f9-bcf7-47b9-9b05-7b83888c1f7a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18a22a11-3c06-47b2-a065-ba7317a005dc",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f0ff555-4f75-4105-bee9-6cf5b9c6bb06",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game Mode",
            "id": "2f8d07ca-a687-45d3-b140-aca20a01c53d",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "cf5bf24d-e481-43fc-9478-e83176a3a379",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b38dad8a-c8ae-4faf-927d-d06e91793751",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Global Mode",
            "id": "2b48ae2b-f59b-45a2-b16f-176feeaf0f7d",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "5c660ba7-0a8a-4fdf-9feb-6aad80d7c3a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseToggle",
                    "type": "Button",
                    "id": "bff1733d-d5ae-43b2-a6e7-79dcf42b076c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildToggle",
                    "type": "Button",
                    "id": "baaad142-850b-4fd1-ad61-3dd2d7f93c68",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GameToggle",
                    "type": "Button",
                    "id": "a3bf2e91-87c0-4190-81df-896d108304ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24d99444-33e0-4c98-b7b8-60ebae3efeb2",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee5bf243-b91f-4352-8085-e8390eedc651",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4fc961a-0d4d-4167-8cc2-3c06514ce126",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80927585-6a42-48e6-a8f7-0a0f3710681f",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GameToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77383355-9bf9-4a26-a145-739a9933bd26",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}